# Shell

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: FIREBASE.md  FIRESTORE_RULES.md  SECURITY.md  auth.html  index.html
services/lsp-manager/: package.json
services/lsp-manager/src/: discovery.ts  index.ts  process.ts  registry.ts
spec/grading-api/: README.md  grading.schema.json
spec/lesson-schema/: README.md  lesson.schema.json
spec/lesson-schema/examples/: hello-world.yaml
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_ico.py  create_icons.py  generate_icons.py  icon.icns
src-tauri/src/: db.rs  docker.rs  error.rs  features.rs  fs.rs  main.rs  security.rs  services.rs
src-tauri/src/commands/: execution.rs  features.rs  fs.rs  grading.rs  lessons.rs  lsp.rs  mod.rs  settings.rs
src/components/: FeatureGate.tsx  IDE.tsx  JoinClassroomModal.tsx  LoadingScreen.tsx  LoginPage.tsx  NewProjectModal.tsx  SettingsPage.tsx  Shelly2.tsx  UpgradeModal.tsx  WelcomeScreen.tsx
src/components/ide/: ActivityBar.tsx  ContextMenu.tsx  EditorArea.tsx  FileExplorer.tsx  IODiagramView.tsx  LessonBrowser.tsx  Panel.tsx  (+6 more)
src/hooks/: useAutoSave.ts  useHotkeys.ts
src/lib/: api.ts  firebase.ts  stripe.ts  utils.ts
src/stores/: appStore.ts  authStore.ts  editorStore.ts  recentProjectsStore.ts  stepDebugStore.ts
src/styles/: globals.css
src/types/: ipc.ts  which.d.ts
